--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -30,3 +30,11 @@ h2 {
 
 #log {
   border-top: 3px solid $red;}
+
+.goog-tooltip {
+  background: infobackground;
+  color: infotext;
+  border: 1px solid infotext;
+  padding: 1px;
+  font: menu large;
+}
