Auto completion for nick names in place.

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -56,3 +56,24 @@ h2 {
 }
 
 .me:hover::before {color: red;}
+
+.ac-renderer {
+  position: absolute;
+  background: #fff;
+  border: 1px solid #666;
+  -moz-box-shadow: 2px 2px 2px rgba(102, 102, 102, .4);
+  -webkit-box-shadow: 2px 2px 2px rgba(102, 102, 102, .4);
+}
+
+.ac-row {
+  cursor: pointer;
+  padding: .4em;
+}
+
+.ac-highlighted {
+  font-weight: bold;
+}
+
+.ac-active {
+  background-color: #b2b4bf;
+}
